Update no estilo da calculadora

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,4 +42,15 @@
     "[html]": {
       "editor.defaultFormatter": "vscode.html-language-features"
     },
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": [
+        "warn", {
+          "additionalHooks": "(useRecoilCallback|useRecoilTransaction_UNSTABLE)"
+        }
+      ]
+    }
   }
