--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5"
   },
